# opengl-implicit3

./: .gitignore  README.md  opengl-implicit3.cabal  stack.yaml
C/: Special.c  marchingCubes.c  marchingCubes.h  marchingCubes0.c  tables.c  test  test.c  test2.c  test_realloc_dblptr.c  test_realloc_dblptr0.c  utils.c  voxel.c
src/: BanchoffChmutov.hs  Bretzel5.hs  Bretzel5Colored.hs  Bretzel5_context.hs  Bretzel5_context2.hs  Bretzel5_context4.hs  ComputeContour3d.hs  CubeOctahedron.hs  Cyclide.hs  Decocube.hs  Goursat.hs  GoursatColored.hs  KleinBottle.hs  KusnerSchmitt.hs  MarchingCubes.hs  Orthocircle.hs  Pilz.hs  Pretzel.hs  Spikes.hs  Spikes2D.hs  Spiral.hs  SuperEllipsoid.hs  Test.hs  Valentine.hs  Voxel.hs  WonderTree.hs
src-exe/: Main.hs
src/MarchingCubes/: ComputeContour3d.hs  OpenGL.hs  Test.hs  Voxel.hs  Voxel_stub.h
src/Utils/: Palettes.hs
src/trash/: Bretzel5.hs  Bretzel5_context3.hs  GoursatColored.hs
