name:                opengl-implicit3
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/opengl-implicit3#readme
license:             GPL-3
author:              Stéphane Laurent
maintainer:          laurent_step@yahoo.fr
copyright:           2018 Stéphane Laurent
category:            Graphicss
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     MarchingCubes.Voxel
                     , MarchingCubes.ComputeContour3d
                     , MarchingCubes.Test
                     , MarchingCubes.OpenGL
                     , MarchingCubes
                     , Utils.OpenGL
                     , Goursat
  build-depends:       base >= 4.7 && < 5
                     , OpenGL
                     , GLUT
                     , split
                     , extra
  default-language:    Haskell2010
  other-extensions:    ForeignFunctionInterface
  include-dirs:        C
  C-sources:           C/tables.c
                     , C/utils.c
                     , C/marchingCubes.c
                     , C/voxel.c
  ghc-options:         -Wall

executable testmc
  hs-source-dirs:      src-exe
  main-is:             Main.hs
  ghc-options:         -fobject-code -fPIC
  build-depends:       base >= 4.7 && < 5
                     , opengl-implicit3
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/opengl-implicit3
