name:                opengl-implicit3
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/opengl-implicit3#readme
license:             GPL-3
author:              Stéphane Laurent
maintainer:          laurent_step@yahoo.fr
copyright:           2018 Stéphane Laurent
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

flag exe
  description: build the executables
  default:     False

library
  hs-source-dirs:      src
  exposed-modules:     MarchingCubes.Voxel
                     , MarchingCubes.ComputeContour3d
                     , MarchingCubes.Test
                     , MarchingCubes.OpenGL
                     , MarchingCubes.Utils.Triangles
                     , MarchingCubes
                     , Utils.OpenGL
                     , Goursat
                     , Bretzel5
                     , Bretzel5Colored
                     , Orthocircle
                     , Utils.Palettes
                     , GoursatColored
  build-depends:       base >= 4.7 && < 5
                     , OpenGL
                     , GLUT
                     , split
                     , extra
                     , numeric-tools
                     , vector
                     , containers
  default-language:    Haskell2010
  other-extensions:    ForeignFunctionInterface
  include-dirs:        C
  C-sources:           C/utils.c
                     , C/tables.c
                     , C/marchingCubes.c
                     , C/voxel.c
  ghc-options:         -Wall

executable testmc
  hs-source-dirs:      src-exe
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , opengl-implicit3
  default-language:    Haskell2010

executable goursat
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeGoursat.hs
  ghc-options:         -fllvm -main-is ExeGoursat
  build-depends:       base >= 4.7 && < 5
                     , opengl-implicit3
  default-language:    Haskell2010

executable goursatcolored
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeGoursatColored.hs
  ghc-options:         -fllvm -main-is ExeGoursatColored
  build-depends:       base >= 4.7 && < 5
                     , opengl-implicit3
  default-language:    Haskell2010

executable bretzel5
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeBretzel5.hs
  ghc-options:         -fllvm -main-is ExeBretzel5
  build-depends:       base >= 4.7 && < 5
                     , opengl-implicit3
  default-language:    Haskell2010

executable bretzel5colored
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeBretzel5Colored.hs
  ghc-options:         -fllvm -main-is ExeBretzel5Colored
  build-depends:       base >= 4.7 && < 5
                     , opengl-implicit3
  default-language:    Haskell2010

executable orthocircle
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeOrthocircle.hs
  ghc-options:         -fllvm -main-is ExeOrthocircle
  build-depends:       base >= 4.7 && < 5
                     , opengl-implicit3
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/opengl-implicit3
